last commit in site project

--- a/www/about.html
+++ b/www/about.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/mainStyle.css" type="text/css">
   <link href="image/rocket.ico" rel="shortcut icon" type="image/logo-icon">
 </head>
-<body>
+<body class="about_body">
   <div id= "content">
   <header>
     <span id="logo"><a href= "index.html">Astro travel</a></span>
@@ -25,8 +25,19 @@
   <a href="pageTitan.html">Титан</a>
   </div>
   <div class="main">
-    <div class="info"><p>Для связи с нами можете использовать почту: support@astra_travel.com</p></div>
-  </div>
+    <div class="info">
+    <table>
+      <thead align= "centre">
+        <tr>
+          <td> Наши контакты</td>
+        </tr>
+      </thead>
+        <tr><td>Facebook: www.facebook.com/Astro_travel/</td><td><img src="image/logo1.png"></td><tr>
+          <tr><td>Instagram: astro_travel</td><td><img src="image/logo2.png"></td><tr>
+            <tr><td>Mail: astro_travel@head.com</td><td><img src="image/logo3.png"></td><tr>
+        </table>
+      </div>
+    </div>
   </div>
   <div id= "footer">
   <footer>
