--- a/www/index.html
+++ b/www/index.html
@@ -26,9 +26,38 @@
   </div>
   <div class="main">
     <h1>Исследуй новые миры!</h1>
-    <h3>Регистрируйся на одну из миссий!</h3>
+    <div class="all">
+		<input checked type="radio" name="respond" id="desktop">
+			<article id="slider">
+					<input checked type="radio" name="slider" id="switch1">
+					<input type="radio" name="slider" id="switch2">
+					<input type="radio" name="slider" id="switch3">
+					<input type="radio" name="slider" id="switch4">
+				<div id="slides">
+					<div id="overflow">
+						<div class="image">
+							<article><img src="image/img1.jpg"></article>
+							<article><img src="image/img2.jpg"></article>
+							<article><img src="image/img3.jpg"></article>
+							<article><img src="image/img4.jpg"></article>
+						</div>
+					</div>
+				</div>
+				<div id="controls">
+					<label for="switch1"></label>
+					<label for="switch2"></label>
+					<label for="switch3"></label>
+					<label for="switch4"></label>
+				</div>
+				<div id="active">
+					<label for="switch1"></label>
+					<label for="switch2"></label>
+					<label for="switch3"></label>
+					<label for="switch4"></label>
+				</div>
   </div>
-  </div>
+</div>
+</div>
   <div id= "footer">
   <footer>
     <span class="left">Тестовый сайт студента: Широкова Ф.А. Все права защищены &copy; 2021 </span>
