--- a/www/reg.html
+++ b/www/reg.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/mainStyle.css" type="text/css">
   <link href="image/rocket.ico" rel="shortcut icon" type="image/logo-icon">
 </head>
-<body>
+<body class= "reg_body">
   <div id= "content">
   <header>
     <span id="logo"><a href= "index.html">Astro travel</a></span>
