--- a/www/pageVenus.html
+++ b/www/pageVenus.html
@@ -29,8 +29,8 @@
     <p class= "Venus_text">Венера — самая горячая планета в Солнечной системе: средняя температура её поверхности — 735 К (462 °C), даже несмотря на то, что Меркурий находится ближе к Солнцу. Венера покрыта непрозрачным слоем облаков из серной кислоты с высокой отражающей способностью, что, помимо всего прочего, закрывает поверхность планеты от прямой видимости.</p>
     <video width="400" height="200" controls="controls" poster="image/CrispCrater.jpg">
       <source src="video/Venus What did we find on the Hellish Planet.mp4" type='video/ogg; codecs="theora, vorbis"'>
-      <source src="video/Venus What did we find on the Hellish Planet.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
-      <source src="video/Venus What did we find on the Hellish Planet.mp4" type='video/webm; codecs="vp8, vorbis"'>
+      <source src="video/Venus What did we find on the Hellish Planet.mp4" type='video/mp4" codecs="avc1.42E01E, mp4a.40.2"'>
+      <source src="video/Venus What did we find on the Hellish Planet.mp4" type='video/webm" codecs="vp8, vorbis"'>
    </video>
   </div>
   </div>
